docs/envoy/v1.16.5/_sources/intro/arch_overview/security/external_dep_dataplane_core.rst.txt
.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `Abseil <https://abseil.io/>`__, `093cc27 <https://github.com/abseil/abseil-cpp/archive/093cc27604df1c4a179b73bc3f00d4d1ce2ce113.tar.gz>`__, 2020-10-01, 
  `BoringSSL <https://github.com/google/boringssl>`__, `597b810 <https://github.com/google/boringssl/archive/597b810379e126ae05d32c1d94b1a9464385acd0.tar.gz>`__, 2020-06-23, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `BoringSSL (FIPS) <https://boringssl.googlesource.com/boringssl/+/master/crypto/fipsmodule/FIPS.md>`__, `fips-20190808 <https://commondatastorage.googleapis.com/chromium-boringssl-fips/boringssl-ae223d6138807a13006342edfeef32e813246b39.tar.xz>`__, 2019-08-08, `cpe:2.3:a:google:boringssl:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Agoogle%3Aboringssl%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `c-ares <https://c-ares.haxx.se/>`__, `1.17.2 <https://github.com/c-ares/c-ares/releases/download/cares-1_17_2/c-ares-1.17.2.tar.gz>`__, 2021-07-24, `cpe:2.3:a:c-ares_project:c-ares:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Ac-ares_project%3Ac-ares%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `fmt <https://fmt.dev>`__, `7.0.3 <https://github.com/fmtlib/fmt/releases/download/7.0.3/fmt-7.0.3.zip>`__, 2020-08-07, `cpe:2.3:a:fmt:fmt:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Afmt%3Afmt%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `gperftools <https://github.com/gperftools/gperftools>`__, `2.8 <https://github.com/gperftools/gperftools/releases/download/gperftools-2.8/gperftools-2.8.tar.gz>`__, 2020-07-06, `cpe:2.3:a:gperftools_project:gperftools:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Agperftools_project%3Agperftools%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `gRPC <https://grpc.io>`__, `d8f4928 <https://github.com/grpc/grpc/archive/d8f4928fa779f6005a7fe55a176bdb373b0f910f.tar.gz>`__, 2020-02-11, `cpe:2.3:a:grpc:grpc:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Agrpc%3Agrpc%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `HTTP Parser <https://github.com/nodejs/http-parser>`__, `4f15b7d <https://github.com/nodejs/http-parser/archive/4f15b7d510dc7c6361a26a7c6d2f7c3a17f8d878.tar.gz>`__, 2020-07-10, `cpe:2.3:a:nodejs:node.js:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Anodejs%3Anode.js%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `libcircllhist <https://github.com/circonus-labs/libcircllhist>`__, `63a16dd <https://github.com/circonus-labs/libcircllhist/archive/63a16dd6f2fc7bc841bb17ff92be8318df60e2e1.tar.gz>`__, 2019-02-11, 
  `libevent <https://libevent.org>`__, `62c152d <https://github.com/libevent/libevent/archive/62c152d9a7cd264b993dad730c4163c6ede2e0a3.tar.gz>`__, 2020-07-31, `cpe:2.3:a:libevent_project:libevent:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Alibevent_project%3Alibevent%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `Nghttp2 <https://nghttp2.org>`__, `1.41.0 <https://github.com/nghttp2/nghttp2/releases/download/v1.41.0/nghttp2-1.41.0.tar.gz>`__, 2020-06-02, `cpe:2.3:a:nghttp2:nghttp2:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Anghttp2%3Anghttp2%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `Protocol Buffers <https://developers.google.com/protocol-buffers>`__, `3.10.1 <https://github.com/protocolbuffers/protobuf/releases/download/v3.10.1/protobuf-all-3.10.1.tar.gz>`__, 2020-10-24, `cpe:2.3:a:google:protobuf:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Agoogle%3Aprotobuf%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `RapidJSON <https://rapidjson.org>`__, `dfbe1db <https://github.com/Tencent/rapidjson/archive/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1.tar.gz>`__, 2019-12-02, `cpe:2.3:a:tencent:rapidjson:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Atencent%3Arapidjson%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `RE2 <https://github.com/google/re2>`__, `2020-07-06 <https://github.com/google/re2/archive/2020-07-06.tar.gz>`__, 2020-07-06, 
  `spdlog <https://github.com/gabime/spdlog>`__, `1.7.0 <https://github.com/gabime/spdlog/archive/v1.7.0.tar.gz>`__, 2020-07-09, 
  `tcmalloc <https://github.com/google/tcmalloc>`__, `d1311bf <https://github.com/google/tcmalloc/archive/d1311bf409db47c3441d3de6ea07d768c6551dec.tar.gz>`__, 2020-09-16, 
  `xxHash <https://github.com/Cyan4973/xxHash>`__, `0.7.3 <https://github.com/Cyan4973/xxHash/archive/v0.7.3.tar.gz>`__, 2020-03-04, 
  `yaml-cpp <https://github.com/jbeder/yaml-cpp>`__, `98acc5a <https://github.com/jbeder/yaml-cpp/archive/98acc5a8874faab28b82c28936f4b400b389f5d6.tar.gz>`__, 2020-07-28, `cpe:2.3:a:yaml-cpp_project:yaml-cpp:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Ayaml-cpp_project%3Ayaml-cpp%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `zlib <https://zlib.net>`__, `79baebe <https://github.com/madler/zlib/archive/79baebe50e4d6b73ae1f8b603f0ef41300110aa3.tar.gz>`__, 2019-04-14, `cpe:2.3:a:gnu:zlib:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Agnu%3Azlib%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `zlib-ng <https://github.com/zlib-ng/zlib-ng>`__, `193d8fd <https://github.com/zlib-ng/zlib-ng/archive/193d8fd7dfb7927facab7a3034daa27ad5b9df1c.tar.gz>`__, 2020-08-16, 

